Finally should be formatted correctly with horizontal wrap

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -52,5 +52,16 @@ body {
         width: 500px;
         margin-left: auto;
         margin-right: auto;
+        overflow: scroll;
+        overflow-x: auto;
+
+        /*
+        To allow for horizontal text wraps
+        */
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -pre-wrap;
+        white-space: -o-pre-wrap;
+        word-wrap: break-word;
     }
 }
